// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<a
  className="cf-link a b c d e f g h i j k l m n"
  href="#!"
  id="link"
  onClick={[Function]}
  role="tab"
>
  CardToolbarLink
</a>
`;

exports[`should render 2`] = `
"
.a {
  position: relative
}

.b {
  display: inline-block
}

.c {
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.d {
  line-height: 1.5
}

.e::after {
  content: '\\\\f003'
}

.f::after {
  font-family: \\"cloudflare-font\\"
}

.g::after {
  font-style: normal
}

.h::after {
  font-weight: normal
}

.i::after {
  margin-top: -0.7em
}

.j::after {
  position: absolute
}

.k::after {
  top: 51%
}

.l::after {
  right: 1rem
}

.m::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.n::after {
  transform: initial;
  -webkit-transform: initial
}
"
`;

exports[`should render with isActive 1`] = `
<a
  className="cf-link a b c d e f g h i j k l m n"
  href="#!"
  id="link"
  onClick={[Function]}
  role="tab"
>
  CardToolbarLink
</a>
`;

exports[`should render with isActive 2`] = `
"
.a {
  position: relative
}

.b {
  display: inline-block
}

.c {
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.d {
  line-height: 1.5
}

.e::after {
  content: '\\\\f003'
}

.f::after {
  font-family: \\"cloudflare-font\\"
}

.g::after {
  font-style: normal
}

.h::after {
  font-weight: normal
}

.i::after {
  margin-top: -0.7em
}

.j::after {
  position: absolute
}

.k::after {
  top: 51%
}

.l::after {
  right: 1rem
}

.m::after {
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease
}

.n::after {
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg)
}
"
`;
